// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactList renders with contacts with both email and name 1`] = `
<div
  className="__InlineList__"
>
  <ul
    className="separate-items-with-comma"
  >
    <li
      key="johndoe@yahoo.com"
    >
      <span>
        John
      </span>
       (
      <ExternalLink
        href="mailto:johndoe@yahoo.com"
      >
        johndoe@yahoo.com
      </ExternalLink>
      )
    </li>
    <li
      key="johndoe2@yahoo.com"
    >
      <span>
        John2
      </span>
       (
      <ExternalLink
        href="mailto:johndoe2@yahoo.com"
      >
        johndoe2@yahoo.com
      </ExternalLink>
      )
    </li>
  </ul>
</div>
`;

exports[`ContactList renders with contacts with only email or name 1`] = `
<div
  className="__InlineList__"
>
  <ul
    className="separate-items-with-comma"
  >
    <li
      key="johndoe@yahoo.com"
    >
      <ExternalLink
        href="mailto:johndoe@yahoo.com"
      >
        johndoe@yahoo.com
      </ExternalLink>
    </li>
    <li
      key="John2"
    >
      <span>
        John2
      </span>
    </li>
  </ul>
</div>
`;
